syntax = "proto3";

package access_log_config.v1;

option go_package = "accesslogconfigv1";

service AccessLogConfigStoreService {
  rpc ListAccessLogConfig(ListAccessLogConfigRequest) returns (ListAccessLogConfigResponse);
}

message AccessLogConfigListItem {
  string uid = 1;
  string name = 2;
}

message ListAccessLogConfigRequest {}

message ListAccessLogConfigResponse {
  repeated AccessLogConfigListItem items = 1;
}