syntax = "proto3";

package node.v1;

option go_package = "nodev1";

service NodeStoreService {
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);
}

message NodeListItem {
  string id = 1;
}

message ListNodesRequest {
  string access_group = 1;
}

message ListNodesResponse {
  repeated NodeListItem items = 1;
}