syntax = "proto3";

package virtual_service_template.v1;

option go_package = "virtualservicetemplatev1";

service VirtualServiceTemplateStoreService {
  rpc ListVirtualServiceTemplate(ListVirtualServiceTemplateRequest) returns (ListVirtualServiceTemplateResponse);
}

message ListVirtualServiceTemplateRequest {}

message VirtualServiceTemplateListItem {
  string uid = 1;
  string name = 2;
}

message ListVirtualServiceTemplateResponse {
  repeated VirtualServiceTemplateListItem items = 1;
}